# PPE_System

./: README.md
Phytium_PPE_System_SourceCode/: README.md
Phytium_PPE_System_SourceCode/Baremetal_Slave_Node/: Kconfig  README.md  main.c  makefile  pe2204_aarch64_phytiumpi_openamp_core0.map  sdkconfig  sdkconfig.h  sdkconfig.old
Phytium_PPE_System_SourceCode/Baremetal_Slave_Node/common/: libmetal_configs.h  memory_layout.h  openamp_configs.h
Phytium_PPE_System_SourceCode/Baremetal_Slave_Node/configs/: pd1904_aarch32_dsk_openamp_core0.config  pd1904_aarch64_dsk_openamp_core0.config  pd2008_aarch32_test_openamp_core0.config  pd2008_aarch64_test_openamp_core0.config  pd2308_aarch64_demo_openamp_core0.config  pd2408_aarch64_test_a_openamp_core0.config  pe2202_aarch32_demo_openamp_core0.config  pe2202_aarch64_demo_openamp_core0.config  pe2204_aarch32_demo_openamp_core0.config  pe2204_aarch32_phytiumpi_openamp_core0.config  pe2204_aarch64_demo_openamp_core0.config  pe2204_aarch64_phytiumpi_openamp_core0.config
Phytium_PPE_System_SourceCode/Baremetal_Slave_Node/inc/: buzzer.h  slaver_00_example.h
Phytium_PPE_System_SourceCode/Baremetal_Slave_Node/src/: buzzer.c  fire_sensor.c  led20set.c  (+1 more)
Phytium_PPE_System_SourceCode/ppe_system/: CHANGELOG.md  CMakeLists.txt  README.md  pe2204_aarch64_phytiumpi_openamp_core0.elf  setup_env.sh
Phytium_PPE_System_SourceCode/ppe_system/include/: camera_node.hpp  core_config.hpp  global_context.hpp  inference_node.hpp  io_node.hpp  lockfree_queue.hpp  rpmsg_node.hpp  ui_main_window.hpp
Phytium_PPE_System_SourceCode/ppe_system/model/: best3-25_int8.param  best3-25_opt.param  bestpromax_int8.param  ppe_12class_int8.param
Phytium_PPE_System_SourceCode/ppe_system/src/: camera_node.cpp  global_context.cpp  inference_node.cpp  io_node.cpp  main.cpp  rpmsg_node.cpp  ui_main_window.cpp
